# 2XD2-Engine

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  GettingStarted.md  LICENSE  README.md
addons/std-addon/: CMakeLists.txt
addons/std-addon/include/2XD2/std_addon/: AnimatedSprite2D.h  Circle2D.h  CollisionRect2D.h  Label.h  Rectangle2D.h  Sprite2D.h
addons/std-addon/include/2XD2/std_addon/nodes/: AnimatedSprite2D.h  Circle2D.h  CollisionRect2D.h  Control.h  Label.h  MarginContainer.h  Rectangle2D.h  Sprite2D.h
addons/std-addon/include/2XD2/std_addon/renderables/: CircleRenderable.h  RectangleRenderable.h  SpriteRenderable.h  TextRenderable.h
addons/std-addon/include/2XD2/std_addon/tiles/: TileMap.h  TileSet.h
addons/std-addon/src/: AnimatedSprite2D.cpp  Circle2D.cpp  CollisionRect2D.cpp  Label.cpp  Rectangle2D.cpp  Sprite2D.cpp
addons/std-addon/src/nodes/: AnimatedSprite2D.cpp  Circle2D.cpp  CollisionRect2D.cpp  Control.cpp  Label.cpp  MarginContainer.cpp  Rectangle2D.cpp  Sprite2D.cpp
addons/std-addon/src/nodes/ui/: ColorRect.cpp  UiNode.cpp
addons/std-addon/src/renderables/: CircleRenderable.cpp  RectangleRenderable.cpp  SpriteRenderable.cpp  TextRenderable.cpp
addons/std-addon/src/tiles/: TileMap.cpp  TileSet.cpp
addons/std-addon/src/tiles/internal/: TileChunk.cpp  TileMapRenderable.cpp
engine/core/: CMakeLists.txt
engine/core/include/2XD2/core/: Camera.h  IdManager.h  Node.h  Node2D.h  RenderLayer.h  Renderable.h  Scene.h  Time.h  Transform2D.h  Vec2.hpp  Vec2f.h
engine/core/include/2XD2/core/collisions/: CollisionBody2D.h  CollisionHandler.h  ICollisionBody.h
engine/core/include/2XD2/core/exceptions/: Exception.h  FileLoadingFailedException.h  NotInitializedException.h
engine/core/src/: Camera.cpp  IdManager.cpp  Node.cpp  Node2D.cpp  Renderable.cpp  Scene.cpp  Time.cpp  Transform2D.cpp  Vec2f.cpp
engine/core/src/collisions/: CollisionBody2D.cpp  CollisionHandler.cpp
engine/framework/: CMakeLists.txt
engine/framework/include/2XD2/framework/: Animation.h  AnimationMap.h  DefaultGameConfig.h  Game.h  IGameConfig.h  MouseButton.h  Time.h
engine/framework/include/2XD2/framework/collisions/: CollisionBody2D.h  Collisions.h  DefaultCollisionHandler.h  ICollisionBody.h  ICollisionHandler.h
engine/framework/include/2XD2/framework/config/: DefaultGameConfig.h  IGameConfig.h
engine/framework/include/2XD2/framework/debug/: DebugSettings.h  DefaultDebugConfig.h  IDebugConfig.h
engine/framework/include/2XD2/framework/drawing/: DrawTarget.h  Drawable.h  Renderable.h  Renderer.h
engine/framework/include/2XD2/framework/exceptions/: FileLoadingFailedException.h
engine/framework/include/2XD2/framework/input/: IInputHandler.h  Input.h  Key.h  MouseButton.h  SFMLInputHandler.h  SFMLToInputMap.h
engine/framework/src/: Animation.cpp  DefaultGameConfig.cpp  Game.cpp  Time.cpp
engine/framework/src/collisions/: CollisionBody2D.cpp  Collisions.cpp  DefaultCollisionHandler.cpp  ICollisionHandler.cpp
engine/framework/src/config/: DefaultGameConfig.cpp
engine/framework/src/debug/: DebugSettings.cpp  DefaultDebugConfig.cpp
engine/framework/src/debug/default/: DefaultOriginMarker.cpp
engine/framework/src/drawing/: DrawTarget.cpp  Drawable.cpp  Renderable.cpp  Renderer.cpp
engine/framework/src/input/: Input.cpp  SFMLInputHandler.cpp
engine/framework/src/nodes/: Drawable2D.cpp  Node.cpp  Node2D.cpp  NodeIdManager.cpp  Sprite2D.cpp
engine/framework/src/resource_manager/: Animation.cpp  Animations.cpp  Config.cpp  DefaultConfigManager.cpp  DefaultFontManager.cpp  Fonts.cpp  Resources.cpp  SFMLAnimationManager.cpp  SFMLTextureManager.cpp  Textures.cpp
engine/framework/src/scene/: Camera.cpp  Scene.cpp
engine/framework/src/signal/: SignalReceiver.cpp
engine/renderer/: CMakeLists.txt
engine/renderer/include/2XD2/renderer/: DefaultDebugRenderer.h  DefaultRenderer.h  IRenderTarget.h  IRenderable.h  IRenderer.h  RenderCommand.h  RenderLayer.h  Renderer.h  ViewMode.h
engine/renderer/src/: DefaultDebugRenderer.cpp  DefaultRenderer.cpp  RenderCommand.cpp  Renderer.cpp
engine/renderer/src/internal/: SfmlConversions.cpp
framework/: CMakeLists.txt
framework/examples/assets/animations/: animations-example-config.json
framework/examples/assets/textures/: textureConfigFileExample.json
framework/include/2XD2/framework/: Animation.h  DefaultGameConfig.h  Game.h  IGameConfig.h  IInputHandler.h  Key.h  MouseButton.h  SFMLInputHandler.h  SFMLTextureParser.h  SFMLToInputMap.h
framework/include/2XD2/framework/exceptions/: Exception.h  FileLoadingFailedException.h  NotInitializedException.h
framework/include/2XD2/framework/input/: IInputHandler.h  Input.h  SFMLInputHandler.h  SFMLToInputMap.h
framework/include/2XD2/framework/nodes/: AnimatedSprite2D.h  Rectangle2D.h  Sprite2D.h
framework/include/2XD2/framework/resource_manager/: IAnimationManager.h  ITextureManager.h  Resources.h  SFMLAnimationManager.h  SFMLTextureManager.h  Textures.h
framework/include/framework/: Game.h
framework/src/: Animation.cpp  DefaultGameConfig.cpp  Game.cpp  IInputManager.cpp  SFMLInputHandler.cpp  SFMLTextureParser.cpp
framework/src/input/: Input.cpp  SFMLInputHandler.cpp
framework/src/nodes/: AnimatedSprite2D.cpp  Rectangle2D.cpp  Sprite2D.cpp
framework/src/resource_manager/: Resources.cpp  SFMLAnimationManager.cpp  SFMLTextureManager.cpp  Textures.cpp
renderer/: CMakeLists.txt
renderer/include/2XD2/renderer/: RenderCommand.h  Renderer.h
renderer/include/2XD2/renderer/exceptions/: Exception.h  NotInitializedException.h  RendererNotInitializedException.h
renderer/include/renderer/: Renderer.h
renderer/src/: Renderer.cpp
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  Camera.cpp  Node.cpp  Node2D.cpp  Renderable.cpp  Scene.cpp  Transform2D.cpp  Vec2.cpp  Vec2f.cpp
tests/framework/: CMakeLists.txt  Node.cpp  SFMLTextureManager.cpp  SFMLTextureParser.cpp  Signals.cpp
tests/framework/resources/input/: test_textures.json
tests/renderer/: CMakeLists.txt  Renderer.cpp
tests/std_addon/: Control.cpp  MarginContainer.cpp
(+2672 files in other folders)
